[gd_scene load_steps=3 format=3 uid="uid://0ivagoypmkgb"]

[ext_resource type="Theme" uid="uid://cyumy3xx60fnx" path="res://themes/theme_ui.tres" id="1_yf03n"]
[ext_resource type="Script" path="res://scripts/3d/settings_menu_ui.gd" id="2_u8hd8"]

[node name="SettingsMenuUI" type="PanelContainer"]
custom_minimum_size = Vector2(600, 400)
offset_right = 300.0
offset_bottom = 300.0
theme = ExtResource("1_yf03n")
theme_type_variation = &"SettingsMenuPanel"
script = ExtResource("2_u8hd8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"MenuHeadingLabel"
text = "Settings"

[node name="PreviewFlipsCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MenuItemLabel"
button_pressed = true
text = "Preview flips"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 24
text = "Close"
